ex-1.09/manifests/ping-pong-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ping-pong-app
          image: hovhanneshovakimyan/ping-pong:1.0
          ports:
            - containerPort: 5001
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-service
spec:
  selector:
    app: ping-pong-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
